[tool.poetry]
name = "jut-suparser"
version = "0.0.1"
description = "Набор методов для парсинга аниме с сайта jut.su"
authors = ["Neito3350 <123307134+Neito3350@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "jut"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
tqdm = "^4.66.2"
asyncio = "^3.4.3"
httpx = "^0.27.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
